--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -11,9 +11,9 @@ block main
     header= t('ticket.create_ticket')
     form.form-horizontal
       .form-group.padding
-        input.input-title.form-control(type='text', placeholder= t('ticket.title'))
+        input.form-control(name='title', type='text', placeholder= t('ticket.title'))
       .form-group.padding
-        textarea.input-content.form-control(rows='15')
+        textarea.form-control(name='content', rows='15')
       .form-group.padding
         button.btn.btn-lg.btn-primary.action-create(type='button')= t('ticket.create')
 
