--- a/core/view/admin.jade
+++ b/core/view/admin.jade
@@ -16,6 +16,8 @@ block main
       li
         a(href='#tab-coupon-code', data-toggle='tab')= t('view.admin.coupon_code')
       li
+        a(href='#tab-compontents', data-toggle='tab') 元件
+      li
         a(href='#tab-system-log', data-toggle='tab') 系统日志
 
     .tab-content
@@ -52,13 +54,22 @@ block main
                 td
                   button.btn.btn-info.btn-sm.action-details(type='button')= t('common.details')
                   .btn-group
+                    button(type='button', data-toggle='dropdown').btn.btn-warning.btn-sm.dropdown-toggle
+                      | 计划 &nbsp;
+                      span.caret
+                    ul.dropdown-menu
+                      li
+                        a(href='#') 加入套餐 A
+                      li
+                        a(href='#') 离开套餐 B
+                  .btn-group
                     button(type='button', data-toggle='dropdown').btn.btn-primary.btn-sm.dropdown-toggle
                       | #{t('common.actions')} &nbsp;
                       span.caret
                     ul.dropdown-menu
                       li
                         a.action-confirm-payment(href='#')= t('view.admin.confirm_payment')
-                      if account.balance <= 0 && account.plans.length == 0
+                      if account.balance <= 0 && !_.isEmpty(account.plans)
                         li
                           a.action-delete-account(href='#')= t('view.admin.delete_account')
 
