--- a/core/view/account/register.jade
+++ b/core/view/account/register.jade
@@ -9,19 +9,19 @@ block main
     .form-group
       label.col-sm-2.col-md-offset-1.control-label= t('account.username')
       .col-sm-5
-        input.input-username.form-control(type='text')
+        input.form-control(name='username', type='text')
     .form-group
       label.col-sm-2.col-md-offset-1.control-label= t('account.email')
       .col-sm-5
-        input.input-email.form-control(type='email')
+        input.form-control(name='email', type='email')
     .form-group
       label.col-sm-2.col-md-offset-1.control-label= t('account.password')
       .col-sm-5
-        input.input-password.form-control(type='password')
+        input.form-control(name='password', type='password')
     .form-group
       label.col-sm-2.col-md-offset-1.control-label= t('view.account.password2')
       .col-sm-5
-        input.input-password2.form-control(type='password')
+        input.form-control(name='password2', type='password')
     .form-group
       .col-sm-offset-3
         button.action-register.btn.btn-lg.btn-primary(type='button')= t('account.register')
@@ -32,4 +32,4 @@ prepend sidebar
     a.btn.btn-lg.btn-success(href='/account/login/')= t('account.login')
 
 append footer
-  script(src='/script/account/register.js')
+  script(src='/script/account.js')
