--- a/core/view/admin.jade
+++ b/core/view/admin.jade
@@ -14,6 +14,8 @@ block main
       li
         a(href='#tab-account-list', data-toggle='tab')= t('view.admin.account_list')
       li
+        a(href='#tab-tickets', data-toggle='tab') 工单
+      li
         a(href='#tab-coupon-code', data-toggle='tab')= t('view.admin.coupon_code')
       li
         a(href='#tab-compontents', data-toggle='tab') 元件
@@ -26,6 +28,14 @@ block main
           h1 
             | RootPanel &nbsp;
             small= app.package.version
+            
+        header 付费方案
+        
+        each plan, name in app.billing.plans
+          .panel.panel-success
+            .panel-heading
+              strong= name
+            .panel-body
         
         header 已加载的插件
         
@@ -72,6 +82,8 @@ block main
                       if account.balance <= 0 && !_.isEmpty(account.plans)
                         li
                           a.action-delete-account(href='#')= t('view.admin.delete_account')
+
+      #tab-tickets.tab-pane
 
       #tab-coupon-code.tab-pane
         form.form-horizontal
