--- a/core/view/layout.jade
+++ b/core/view/layout.jade
@@ -5,8 +5,8 @@ html
     block header
       link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
       link(rel='stylesheet', href='/style/layout.css')
-      for hook in applyHooks('view.layout.styles')
-        link(rel='stylesheet', href=hook.path)
+      for path in getHooks('view.layout.styles', {pluck: 'path'})
+        link(rel='stylesheet', href=path)
 
   body(data-username="#{account ? account.username : ''}", data-locale-version=app.i18n.localeHash(req), data-csrf-token=req.session.csrf_token)
     header.navbar-fixed-top
@@ -21,7 +21,7 @@ html
             a.navbar-brand(href='/')= t(config.web.t_name)
           #navbar-collapse.collapse.navbar-collapse
             ul.nav.navbar-nav
-              for hook in applyHooks('view.layout.menu_bar')
+              for hook in getHooks('view.layout.menu_bar')
                 li
                   a(href=hook.href, target=hook.target)= hook.plugin.getTranslator(req)(hook.t_body)
             ul.nav.navbar-nav.navbar-right
@@ -85,6 +85,6 @@ html
       script(src='/bower_components/backbone/backbone.js')
       script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
       script(src='/script/layout.js')
-      for hook in applyHooks('view.layout.scripts')
-        script(src=hook.path)
+      for path in getHooks('view.layout.scripts', {pluck: 'path'})
+        script(src=path)
       block footer
