--- a/core/view/account/login.jade
+++ b/core/view/account/login.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('account.login')} | #{t(config.web.t_name)}
+  title #{t('account.login')} | #{site_name}
 
 block main
   header= t('account.login')
