--- a/core/view/panel/financials.jade
+++ b/core/view/panel/financials.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('account.financials')} | #{t(config.web.t_name)}
+  title #{t('account.financials')} | #{site_name}
 
 block main
   .row
