--- a/core/view/admin.jade
+++ b/core/view/admin.jade
@@ -1,7 +1,7 @@
 extends layout
 
 prepend header
-  title #{t('admin.admin_panel')} | #{site_name}
+  title #{t('admin.admin_panel')} | #{site.name}
 
 append header
   link(rel='stylesheet', href='/style/admin.css')
