--- a/core/view/ticket/create.jade
+++ b/core/view/ticket/create.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('ticket.create_ticket')} | #{site_name}
+  title #{t('ticket.create_ticket')} | #{site.name}
 
 append header
   link(rel='stylesheet', href='/style/ticket.css')
