--- a/core/view/account/register.jade
+++ b/core/view/account/register.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('account.register')} | #{site_name}
+  title #{t('account.register')} | #{site.name}
 
 block main
   header= t('account.register')
@@ -30,6 +30,3 @@ prepend sidebar
   .row
     header= t('view.account.already_register')
     a.btn.btn-lg.btn-success(href='/account/login/')= t('account.login')
-
-append footer
-  script(src='/script/account.js')
