--- a/core/view/panel.jade
+++ b/core/view/panel.jade
@@ -1,7 +1,7 @@
 extends layout
 
 prepend header
-  title #{t('panel.')} | #{site_name}
+  title #{t('panel.')} | #{site.name}
 
 append header
   link(rel='stylesheet', href='/style/panel.css')
