--- a/core/view/ticket/list.jade
+++ b/core/view/ticket/list.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 prepend header
-  title #{t('ticket.ticket_list')} | #{site_name}
+  title #{t('ticket.ticket_list')} | #{site.name}
 
 block main
   #list-view
