--- a/plugins/linux/view/monitor.jade
+++ b/plugins/linux/view/monitor.jade
@@ -1,7 +1,7 @@
 extends ../../../core/view/layout
 
 prepend header
-  title #{t('server_monitor')} | #{site_name}
+  title #{t('server_monitor')} | #{site.name}
 
 append header
   link(rel='stylesheet', href='/plugins/linux/style/monitor.css')
