--- a/plugins/rpvhost/view/index.jade
+++ b/plugins/rpvhost/view/index.jade
@@ -1,7 +1,7 @@
 extends ../../../core/view/layout
 
 prepend header
-  title RP 主机：Linux 虚拟主机 | #{site_name}
+  title RP 主机：Linux 虚拟主机 | #{site.name}
 
 append header
   link(rel='stylesheet', href='/plugins/rpvhost/style/index.css')
